--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,10 @@ source:
     - fd_setsize.patch                # [win]
     - mingw-w64--DMS_WINXX.patch
     - win-msc_ver-1900.patch
+    - 0017-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
 
 build:
-  number: 1
+  number: 2
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
