--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,9 +22,9 @@ source:
     - win-msc_ver-1900.patch
     - fix-ABI-issue29943.patch
     - do-not-download-externals.patch  # [win]
-
+    - 0015-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
 build:
-  number: 1
+  number: 2
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
