--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,20 +39,20 @@ requirements:
   build:
     - bzip2 1.0.*       # [unix]
     - openssl 1.0.*     # [unix]
-    - readline 6.2*     # [unix]
-    - sqlite 3.13.*     # [unix]
-    - tk 8.5.*          # [unix]
+    - readline 7.0      # [unix]
+    - sqlite 3.20.*     # [unix]
+    - tk 8.6.*          # [unix]
     - xz 5.2.*          # [unix]
-    - zlib 1.2.11        # [unix]
-    - ncurses 5.9*      # [linux]
+    - zlib 1.2.11       # [unix]
+    - ncurses 5.9       # [linux]
   run:
     - openssl 1.0.*     # [unix]
-    - readline 6.2*     # [unix]
-    - sqlite 3.13.*     # [unix]
-    - tk 8.5.*          # [unix]
+    - readline 7.0      # [unix]
+    - sqlite 3.20.*     # [unix]
+    - tk 8.6.*          # [unix]
     - xz 5.2.*          # [unix]
-    - zlib 1.2.11        # [unix]
-    - ncurses 5.9*      # [linux]
+    - zlib 1.2.11       # [unix]
+    - ncurses 5.9       # [linux]
     - vs2015_runtime    # [win]
 
 test:
