--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,6 +42,7 @@ requirements:
     - 7za               # [win]
     - bzip2 1.0.*       # [unix]
     - curl >=7.44.0,<8              # [win]
+    - nasm 2.11.06      # [win]
     - openssl 1.0.*     # [unix]
     - readline 7.0     # [unix]
     - sqlite 3.20.*     # [unix]
