--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,10 @@ source:
       - osx-dist.patch                  # [osx and x86_64]
       - win-find_exe.patch              # [win]
       - win-library_bin.patch           # [win]
+      - 0008-Win32-Fixes-for-Windows-GCC-interop-needed-by-RPy2-a.patch
       - 0017-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
 build:
-  number: 4
+  number: 5
   no_link:
     - bin/python2.7     # [unix]
     - DLLs/_ctypes.pyd  # [win]
