add patch for windows gcc interop
passes -DMS_WIN32 or -DMS_WIN64 to gcc on Windows

patch from:
https://github.com/AnacondaRecipes/python-feedstock/tree/master-2.7

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
       - osx-dist.patch                  # [osx and x86_64]
       - win-find_exe.patch              # [win]
       - win-library_bin.patch           # [win]
+      - 0008-Win32-Fixes-for-Windows-GCC-interop-needed-by-RPy2-a.patch
       - 0017-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
 build:
   number: 4
