--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "3.6.5" %}
+{% set version = "3.7.0" %}
 
 package:
   name: python
@@ -6,9 +6,8 @@ package:
 
 source:
   url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tgz
-  sha256: 53a3e17d77cd15c5230192b6a8c1e031c07cd9f34a2f089a731c6f6bd343d5c6
+  sha256: 85bb9feb6863e04fb1700b018d9d42d1caac178559ffa453d7e6a436e259fd0d
   patches:
-    - omit-local-site-packages.patch  # [osx]
     - osx64-dist.patch                # [osx and x86_64]
     - win-find_exe.patch              # [win]
     - win-library_bin.patch           # [win]
@@ -20,45 +19,52 @@ source:
     - fd_setsize.patch                # [win]
     - mingw-w64--DMS_WINXX.patch
     - win-msc_ver-1900.patch
-    - fix-ABI-issue29943.patch
     - do-not-download-externals.patch  # [win]
     - 0015-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
-    - winsdk.patch                     # [win]
+    - winsdk.patch  # [win]
 
 build:
-  number: 1
+  number: 0
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
     - DLLs/_ctypes.pyd  # [win]
-    - bin/python3.6     # [unix]
-  track_features:
-    - vc14              # [win]
+    - bin/python3.7     # [unix]
+  #track_features:
+    #- vc14              # [win]
   script_env:
     - python_branding
+  skip: true  # [win and vc<14]
 
 requirements:
   build:
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+    - {{ cdt('libx11-devel') }}          # [linux]
     - 7za               # [win]
-    - bzip2 1.0.*       # [unix]
-    - curl >=7.44.0,<8              # [win]
+    - curl              # [win]
+  host:
     - nasm 2.11.06      # [win]
-    - openssl 1.0.*     # [unix]
-    - readline 7.0     # [unix]
-    - sqlite 3.20.*     # [unix]
-    - tk 8.6.*          # [unix]
-    - xz 5.2.*          # [unix]
-    - zlib 1.2.11        # [unix]
-    - ncurses 5.9      # [linux]
+    - bzip2             # [unix]
+    - openssl           # [unix]
+    - readline          # [unix]
+    - sqlite            # [unix]
+    - tk                # [unix]
+    - xz                # [unix]
+    - zlib              # [unix]
+    - ncurses           # [linux]
+    - libffi            # [unix]
   run:
-    - openssl 1.0.*     # [unix]
-    - readline 7.0     # [unix]
-    - sqlite 3.20.*     # [unix]
-    - tk 8.6.*          # [unix]
-    - xz 5.2.*          # [unix]
-    - zlib 1.2.11        # [unix]
-    - ncurses 5.9      # [linux]
-    - vs2015_runtime    # [win]
+    - openssl           # [unix]
+    - readline          # [unix]
+    - sqlite            # [unix]
+    - tk                # [unix]
+    - xz                # [unix]
+    - zlib              # [unix]
+    - ncurses           # [linux]
+    - libffi            # [unix]
+    #- vs2015_runtime    # [win]
 
 test:
   commands:
