--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,36 +23,40 @@ source:
     - 0017-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
 
 build:
-  number: 1
+  number: 2
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
     - DLLs/_ctypes.pyd  # [win]
     - bin/python3.5     # [unix]
-  track_features:
-    - vc14              # [win]
   script_env:
     - python_branding
+  skip: True            # [win and vc != 14]
 
 requirements:
   build:
-    - bzip2 1.0.*       # [unix]
-    - openssl 1.0.*     # [unix]
-    - readline 7.0      # [unix]
-    - sqlite 3.20.*     # [unix]
-    - tk 8.6.*          # [unix]
-    - xz 5.2.*          # [unix]
-    - zlib 1.2.11       # [unix]
-    - ncurses 5.9       # [linux]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+  host:
+    - bzip2  # [unix]
+    - sqlite  # [unix]
+    - xz  # [unix]
+    - zlib  # [unix]
+    - openssl  # [unix]
+    - readline  # [unix]
+    - tk  # [unix]
+    - ncurses  # [unix]
+    - libffi  # [unix]
   run:
-    - openssl 1.0.*     # [unix]
-    - readline 7.0      # [unix]
-    - sqlite 3.20.*     # [unix]
-    - tk 8.6.*          # [unix]
-    - xz 5.2.*          # [unix]
-    - zlib 1.2.11       # [unix]
-    - ncurses 5.9       # [linux]
-    - vs2015_runtime    # [win]
+    - bzip2  # [unix]
+    - sqlite  # [unix]
+    - xz  # [unix]
+    - zlib  # [unix]
+    - openssl  # [unix]
+    - readline  # [unix]
+    - tk  # [unix]
+    - ncurses  # [unix]
+    - libffi  # [unix]
 
 test:
   commands:
@@ -69,11 +73,22 @@ about:
   license: PSF
   license_file: LICENSE
   summary: General purpose programming language
+  description: |
+    Python is a widely used high-level, general-purpose, interpreted, dynamic
+    programming language. Its design philosophy emphasizes code
+    readability, and its syntax allows programmers to express concepts in
+    fewer lines of code than would be possible in languages such as C++ or
+    Java. The language provides constructs intended to enable clear programs
+    on both a small and large scale.
+  doc_url: https://www.python.org/doc/versions/
+  doc_source_url: https://github.com/python/pythondotorg/blob/master/docs/source/index.rst
+  dev_url: https://docs.python.org/devguide/
 
 extra:
   recipe-maintainers:
     - jakirkham
     - jjhelmus
+    - mingwandroid
     - msarahan
     - pelson
     - ocefpaf
