--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,8 +65,8 @@ test:
     - 2to3 -h
     - pydoc -h
     - python3-config --help  # [unix]
-    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
-    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
+    - python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"
+    -  _PYTHON_SYSCONFIGDATA_NAME=_sysconfigdata_x86_64_conda_cos6_linux_gnu python -c "import sysconfig; print(sysconfig.get_config_var('CC'))"  # [linux64]
 
 about:
   home: http://www.python.org/
