--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,9 +9,11 @@ MACOSX_SDK_VERSION:            # [osx and x86_64]
 build_type:
   - release
   - debug                      # [not win]
+channel_sources:
+  - conda-forge/label/python_rc,conda-forge
 channel_targets:
-  - conda-forge main
-  - conda-forge python_debug   # [not win]
+  - conda-forge python_313a4
+  - conda-forge python_313a4_debug   # [not win]
 zip_keys:
   - build_type
   - channel_targets
