--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -101,7 +101,6 @@ outputs:
       ignore_run_exports_from:   # [unix]
         # C++ only installed so CXX is defined for distutils/sysconfig.
         - {{ compiler('cxx') }}  # [unix]
-        - zlib
       # Disabled until verified to work correctly
       detect_binary_files_with_prefix: true
       # detect_binary_files_with_prefix: False
@@ -182,6 +181,7 @@ outputs:
       run:
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
         - tzdata
+        - zlib >=1.3
 {% if dev != '' %}
         - _python_rc
 {% endif %}
