MNT: Re-rendered with conda-build 24.1.2, conda-smithy 3.33.0, and conda-forge-pinning 2024.03.24.19.14.03

--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -25,6 +25,7 @@ jobs:
         UPLOAD_PACKAGES: 'True'
         SHORT_CONFIG: osx_arm64_build_typereleasechannel__hbf952199ba
   timeoutInMinutes: 360
+  variables: {}
 
   steps:
   # TODO: Fast finish on azure pipelines?
