--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_main.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_main.yaml
@@ -9,7 +9,7 @@ c_compiler_version:
 cdt_name:
 - cos6
 channel_sources:
-- conda-forge
+- mark.harfouche,conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -49,5 +49,3 @@ zip_keys:
   - channel_targets
 - - c_compiler_version
   - cxx_compiler_version
-zlib:
-- '1.2'
