--- a/.ci_support/linux_aarch64_build_typereleasechannel_targetsconda-forge_main.yaml
+++ b/.ci_support/linux_aarch64_build_typereleasechannel_targetsconda-forge_main.yaml
@@ -13,7 +13,7 @@ cdt_arch:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- mark.harfouche,conda-forge
 channel_targets:
 - conda-forge main
 cxx_compiler:
@@ -53,5 +53,3 @@ zip_keys:
   - channel_targets
 - - c_compiler_version
   - cxx_compiler_version
-zlib:
-- '1.2'
