--- a/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug.yaml
+++ b/.ci_support/linux_ppc64le_build_typedebugchannel_targetsconda-forge_python_debug.yaml
@@ -9,7 +9,7 @@ c_compiler_version:
 cdt_name:
 - cos7
 channel_sources:
-- conda-forge
+- mark.harfouche,conda-forge
 channel_targets:
 - conda-forge python_debug
 cxx_compiler:
@@ -47,5 +47,3 @@ zip_keys:
   - channel_targets
 - - c_compiler_version
   - cxx_compiler_version
-zlib:
-- '1.2'
