--- a/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_main.yaml
+++ b/.ci_support/linux_64_build_typereleasechannel_targetsconda-forge_main.yaml
@@ -6,6 +6,10 @@ c_compiler:
 - gcc
 c_compiler_version:
 - '12'
+c_stdlib:
+- sysroot
+c_stdlib_version:
+- '2.12'
 cdt_name:
 - cos6
 channel_sources:
@@ -49,5 +53,7 @@ zip_keys:
   - channel_targets
 - - c_compiler_version
   - cxx_compiler_version
+- - c_stdlib_version
+  - cdt_name
 zlib:
 - '1.2'
