--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,8 +12,8 @@ build_type:
 channel_sources:
   - conda-forge/label/python_rc,conda-forge
 channel_targets:
-  - conda-forge python_313a5
-  - conda-forge python_313a5_debug   # [not win]
+  - conda-forge python_313b1
+  - conda-forge python_313b1_debug   # [not win]
 zip_keys:
   - build_type
   - channel_targets
