--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "3.12.4" %}
-{% set dev = "" %}
+{% set version = "3.13.0" %}
+{% set dev = "rc1" %}
 {% set dev_ = "" %}
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
@@ -46,33 +46,9 @@ source:
 {% else %}
   - url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}{{ dev }}.tar.xz
     # md5 from: https://www.python.org/downloads/release/python-{{ ver3nd }}{{ dev }}/
-    md5: d68f25193eec491eb54bc2ea664a05bd
+    md5: 9213ecfedc510ac2a14c0eeea96baf02
 {% endif %}
-    patches:
-      - patches/0001-Win32-Change-FD_SETSIZE-from-512-to-2048.patch
-      - patches/0002-Win32-Do-not-download-externals.patch
-      - patches/0003-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
-      - patches/0004-Disable-registry-lookup-unless-CONDA_PY_ALLOW_REG_PA.patch
-      - patches/0005-Unvendor-openssl.patch
-      - patches/0006-Unvendor-sqlite3.patch
-      - patches/0007-Add-CondaEcosystemModifyDllSearchPath.patch
-      - patches/0008-Doing-d1trimfile.patch
-      # https://github.com/python/cpython/pull/23523
-      - patches/0009-cross-compile-darwin.patch
-      - patches/0010-Fix-TZPATH-on-windows.patch
-      # https://github.com/python/cpython/pull/24324
-      - patches/0011-Make-dyld-search-work-with-SYSTEM_VERSION_COMPAT-1.patch
-      - patches/0012-Unvendor-bzip2.patch
-      - patches/0013-Unvendor-libffi.patch
-      - patches/0014-Unvendor-tcltk.patch
-      - patches/0015-unvendor-xz.patch
-      - patches/0016-unvendor-zlib.patch
-      - patches/0017-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch
-      - patches/0018-Unvendor-expat.patch
-      - patches/0019-Remove-unused-readelf.patch
-      - patches/0020-Don-t-checksharedmods-if-cross-compiling.patch
-      - patches/0021-Override-configure-LIBFFI.patch
-      - patches/0022-Allow-linking-ncursesw-panelw-on-macOS-if-available.patch
+
 
 build:
   number: {{ build_number }}
@@ -260,8 +236,6 @@ outputs:
         - python -c "from ctypes import CFUNCTYPE; CFUNCTYPE(None)(id)"
         # Test for wide character supported via ncursesw
         - TERM=xterm >/dev/null python -c "import curses; scr = curses.initscr(); curses.unget_wch('x'); assert 'x' ==  scr.get_wch()"  # [unix]
-        # crypt module will be removed in 3.13 => this failing is a reminder to remove the libxcrypt dependency
-        - python -c "import crypt"  # [unix]
 
   - name: libpython-static
     script: build_static.sh  # [unix]
