--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 0 %}
+{% set build_number = 1 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -111,8 +111,8 @@ outputs:
         # C++ only installed so CXX is defined for distutils/sysconfig.
         - {{ compiler('cxx') }}  # [unix]
         # These two are just to get the headers needed for tk.h, but is unused
-        - xorg-libx11
-        - xorg-xorgproto
+        - xorg-libx11            # [unix]
+        - xorg-xorgproto         # [unix]
       # Disabled until verified to work correctly
       detect_binary_files_with_prefix: true
       # detect_binary_files_with_prefix: False
@@ -179,8 +179,8 @@ outputs:
         - readline  # [not win]
         - tk
         # These two are just to get the headers needed for tk.h, but is unused
-        - xorg-libx11
-        - xorg-xorgproto
+        - xorg-libx11       # [unix]
+        - xorg-xorgproto    # [unix]
         - ncurses  # [unix]
         - libffi
         - ld_impl_{{ target_platform }} >=2.36.1  # [linux]
@@ -208,7 +208,7 @@ outputs:
         # Tried to use enable_language(C) to avoid needing this. It does not work.
         - {{ compiler('cxx') }}
         # For tkinter, but we expect from system
-        - xorg-libx11
+        - xorg-libx11   # [unix]
       files:
         - tests/distutils/*
         - tests/cmake/*
