--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,7 +4,7 @@
 {% set ver2 = '.'.join(version.split('.')[0:2]) %}
 {% set ver2nd = ''.join(version.split('.')[0:2]) %}
 {% set ver3nd = ''.join(version.split('.')[0:3]) %}
-{% set build_number = 2 %}
+{% set build_number = 3 %}
 
 # this makes the linter happy
 {% set channel_targets = channel_targets or 'conda-forge main' %}
@@ -77,6 +77,11 @@ source:
 {% endif %}
       - patches/0024-Do-not-define-pid_t-as-it-might-conflict-with-the-ac.patch
       - patches/0025-Unvendor-zstd.patch
+
+      # zlib-ng for all platforms
+      - patches/0026-Adjust-windows-project-for-zlib-ng.patch
+      - patches/0027-Use-zlib-ng-on-unix-instead-of-zlib.patch
+      - patches/0028-Update-usage-of-zlib-to-explicitely-use-zlib-ng.patch
 
 build:
   number: {{ build_number }}
@@ -163,7 +168,7 @@ outputs:
         - bzip2          # [build_platform != target_platform]
         - libsqlite      # [build_platform != target_platform]
         - liblzma-devel  # [build_platform != target_platform]
-        - zlib           # [build_platform != target_platform]
+        - zlib-ng        # [build_platform != target_platform]
         - zstd           # [build_platform != target_platform]
         - openssl        # [build_platform != target_platform]
         - readline       # [not win and build_platform != target_platform]
@@ -177,7 +182,7 @@ outputs:
         - bzip2
         - libsqlite
         - liblzma-devel
-        - zlib
+        - zlib-ng
         - zstd
         - openssl
         - readline  # [not win]
