--- a/recipe/tests/cmake/CMakeLists.txt
+++ b/recipe/tests/cmake/CMakeLists.txt
@@ -1,16 +1,10 @@
-# https://martinopilia.com/posts/2018/09/15/building-python-extension.html
-# FindPythonInterp and FindPythonLibs are deprecated since cmake 3.12
-# These can be replaced by find_package(Python ${PY_VER} REQUIRED)
-# But these are still used by other packages, so we keep them.
+# https://scikit-build-core.readthedocs.io/en/latest/guide/cmakelists.html#finding-python
 
 cmake_minimum_required(VERSION 3.10)
 enable_language(C)
 project(mymath)
 
-option(PY_VER, "Python version to use")
+option(PY_VER "Python version to use")
+option(EXTRA_COMPONENTS "Additional Python components to check for")
 
-find_package(PythonInterp ${PY_VER} REQUIRED)
-#            PATHS $ENV{CONDA_PREFIX}
-
-# This goes after, since it uses PythonInterp as hint
-find_package(PythonLibs ${PY_VER} REQUIRED)
+find_package(Python ${PY_VER} COMPONENTS Interpreter ${EXTRA_COMPONENTS} REQUIRED)
